2004-02-20  Michael Meeks  <michael@ximian.com>

	* tests/testtoolbar.c (main): re-arrange widgets to allow
	more overflowing toolbar goodness.

2004-02-20  Alexander Larsson  <alexl@redhat.com>

	* gtk/gtkfilechooserdefault.c: (shortcuts_append_desktop):
	Desktop directory is not translated.
	(set_tree_model):
	There might not be volumes for all paths.
	* gtk/gtkfilechooserwidget.c:
	(gtk_file_chooser_widget_constructor):
	Use gtk_file_chooser_set_current_folder to set cwd.

Thu Feb 19 19:58:53 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.[ch]: New widget to handle the path in the
	fileselector implementation.  Not hooked up to anything yet.

	* gtk/Makefile.am: support the path bar.

Fri Feb 20 00:21:38 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkstyle.c (gtk_default_draw_handle): 
	(gtk_default_draw_box): Make the paned handles gray when the the 
	widget is_focus() but not HAS_FOCUS().  (#122751, Soeren Sandmann)

Thu Feb 19 23:41:06 2004  Matthias Clasen  <maclas@gmx.de>

	Fixes for #82099:
	
	* gdk/x11/gdkevents-x11.c: Introduce new XSettings "Gtk/ButtonImages"
	and "Gtk/MenuImages" and map them to "gtk-button-images" and 
	"gtk-menu-images".

	* gtk/gtkimagemenuitem.c: Add a boolean setting "gtk-menu-images" and 
	use it to set the visibility of the embedded image.

	* gtk/gtkbutton.c: Add a boolean setting "gtk-button-images" and use
	it to set the visibility of an embedded image.

Thu Feb 19 21:26:10 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkactiongroup.c (gtk_action_group_add_radio_actions_full): 
	Give each radio action its own value.  (#134889, Paolo Borelli)

2004-02-19  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdialog.c (gtk_file_chooser_dialog_finalize):
	Chain to the parent's ::finalize() handler.  Fixes #134885; caught
	by Jan Arne Petersen.

2004-02-19  Mark McLoughlin  <mark@skynet.ie>

	Make the entire expander widget width prelight as suggested
	by Seth in bug #134263.
